crates/oxc_angular_compiler/tests/snapshots/integration_test__ng_content_select.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _c0 = [[["",8,"header"]]];
const _c1 = [".header"];
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵprojectionDef(_c0);
    i0.ɵɵprojection(0);
  }
}
