crates/oxc_angular_compiler/tests/snapshots/integration_test__ng_content_with_ng_project_as_attr_selector.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _c0 = ["*"];
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵprojectionDef();
    i0.ɵɵprojection(0,0,["ngProjectAs","[card-content]",5,["","card-content",""]]);
  }
}
