crates/oxc_angular_compiler/tests/snapshots/integration_test__ng_template.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_ng_template_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1,"Template content");
    i0.ɵɵelementEnd();
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵtemplate(0,TestComponent_ng_template_0_Template,2,0,"ng-template",
      null,0,i0.ɵɵtemplateRefExtractor); }
}
