crates/oxc_angular_compiler/tests/snapshots/integration_test__ng_template_reference_in_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_ng_template_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1,"Loading...");
    i0.ɵɵelementEnd();
  }
}
function TestComponent_div_3_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1,"Content");
    i0.ɵɵelementEnd();
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtemplate(0,TestComponent_ng_template_0_Template,2,0,"ng-template",null,0,i0.ɵɵtemplateRefExtractor);
    i0.ɵɵtext(2,"\n");
    i0.ɵɵtemplate(3,TestComponent_div_3_Template,2,0,"div",1);
  }
  if ((rf & 2)) {
    const loadingState_r1 = i0.ɵɵreference(1);
    i0.ɵɵadvance(3);
    i0.ɵɵproperty("ngIf",!ctx.loading)("ngIfElse",loadingState_r1);
  }
}
