crates/oxc_angular_compiler/tests/snapshots/integration_test__pipe_in_if_object_literal.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _c0 = (a0,a1) =>({open:a0,isOverlay:a1});
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n  ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n");
  }
  if ((rf & 2)) {
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(ctx.open);
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,4,1);
    i0.ɵɵpipe(1,"async");
    i0.ɵɵpipe(2,"async");
  }
  if ((rf & 2)) {
    let tmp_0_0;
    i0.ɵɵconditional(((tmp_0_0 = i0.ɵɵpureFunction2(5,_c0,i0.ɵɵpipeBind1(1,1,ctx.value),
        i0.ɵɵpipeBind1(2,3,ctx.overlay)))? 0: -1),tmp_0_0);
  }
}
