crates/oxc_angular_compiler/tests/snapshots/integration_test__pipe_in_property_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelement(0,"div",0);
    i0.ɵɵpipe(1,"uppercase");
  }
  if ((rf & 2)) { i0.ɵɵproperty("title",i0.ɵɵpipeBind1(1,1,ctx.name)); }
}
