crates/oxc_angular_compiler/tests/snapshots/integration_test__reference_accessed_from_multiple_child_views.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_3_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n    ");
    i0.ɵɵelementStart(1,"button",1);
    i0.ɵɵlistener("click",function TestComponent_Conditional_3_Template_button_click_1_listener() {
      i0.ɵɵrestoreView(_r1);
      i0.ɵɵnextContext();
      const widget_r2 = i0.ɵɵreference(1);
      return i0.ɵɵresetView(widget_r2.focus());
    });
    i0.ɵɵtext(2,"A");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n  ");
  }
}
function TestComponent_Conditional_4_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r3 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n    ");
    i0.ɵɵelementStart(1,"button",1);
    i0.ɵɵlistener("click",function TestComponent_Conditional_4_Template_button_click_1_listener() {
      i0.ɵɵrestoreView(_r3);
      i0.ɵɵnextContext();
      const widget_r2 = i0.ɵɵreference(1);
      return i0.ɵɵresetView(widget_r2.focus());
    });
    i0.ɵɵtext(2,"B");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n  ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div",null,0);
    i0.ɵɵtext(2,"\n  ");
    i0.ɵɵconditionalCreate(3,TestComponent_Conditional_3_Template,4,0);
    i0.ɵɵconditionalCreate(4,TestComponent_Conditional_4_Template,4,0);
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵadvance(3);
    i0.ɵɵconditional((ctx.showA? 3: -1));
    i0.ɵɵadvance();
    i0.ɵɵconditional((ctx.showB? 4: -1));
  }
}
