crates/oxc_angular_compiler/tests/snapshots/integration_test__reference_in_sibling_child_views_with_for.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _forTrack0 = ($index,$item) =>$item.id;
function TestComponent_For_9_Conditional_4_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r4 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n        ");
    i0.ɵɵelementStart(1,"div",2);
    i0.ɵɵlistener("click",function TestComponent_For_9_Conditional_4_Template_div_click_1_listener() {
      i0.ɵɵrestoreView(_r4);
      const item_r2 = i0.ɵɵnextContext().$implicit;
      i0.ɵɵnextContext();
      const widget_r3 = i0.ɵɵreference(5);
      return i0.ɵɵresetView(widget_r3.expand(item_r2));
    });
    i0.ɵɵtext(2,"Details");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n      ");
  }
}
function TestComponent_For_9_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n      ");
    i0.ɵɵelementStart(1,"span",2);
    i0.ɵɵlistener("click",function TestComponent_For_9_Template_span_click_1_listener() {
      const item_r2 = i0.ɵɵrestoreView(_r1).$implicit;
      i0.ɵɵnextContext();
      const widget_r3 = i0.ɵɵreference(5);
      return i0.ɵɵresetView(widget_r3.select(item_r2));
    });
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n      ");
    i0.ɵɵconditionalCreate(4,TestComponent_For_9_Conditional_4_Template,4,0);
  }
  if ((rf & 2)) {
    const item_r2 = ctx.$implicit;
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(item_r2.name);
    i0.ɵɵadvance(2);
    i0.ɵɵconditional((item_r2.expanded? 4: -1));
  }
}
function TestComponent_Conditional_10_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r5 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n      ");
    i0.ɵɵelementStart(1,"button",2);
    i0.ɵɵlistener("click",function TestComponent_Conditional_10_Template_button_click_1_listener() {
      i0.ɵɵrestoreView(_r5);
      i0.ɵɵnextContext();
      const widget_r3 = i0.ɵɵreference(5);
      return i0.ɵɵresetView(widget_r3.selectAll());
    });
    i0.ɵɵtext(2,"Select All");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n    ");
  }
}
function TestComponent_Conditional_16_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r6 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n    ");
    i0.ɵɵelementStart(1,"button",2);
    i0.ɵɵlistener("click",function TestComponent_Conditional_16_Template_button_click_1_listener() {
      i0.ɵɵrestoreView(_r6);
      i0.ɵɵnextContext();
      const cb_r7 = i0.ɵɵreference(13);
      return i0.ɵɵresetView(cb_r7.reset());
    });
    i0.ɵɵtext(2,"Reset");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n  ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1,"\n  ");
    i0.ɵɵelementContainerStart(2);
    i0.ɵɵtext(3,"\n    ");
    i0.ɵɵelementStart(4,"div",null,0);
    i0.ɵɵtext(6,"Content");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(7,"\n    ");
    i0.ɵɵrepeaterCreate(8,TestComponent_For_9_Template,5,2,null,null,_forTrack0);
    i0.ɵɵconditionalCreate(10,TestComponent_Conditional_10_Template,4,0);
    i0.ɵɵelementContainerEnd();
    i0.ɵɵtext(11,"\n  ");
    i0.ɵɵelementStart(12,"div",null,1);
    i0.ɵɵtext(14,"Other");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(15,"\n  ");
    i0.ɵɵconditionalCreate(16,TestComponent_Conditional_16_Template,4,0);
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵadvance(8);
    i0.ɵɵrepeater(ctx.items);
    i0.ɵɵadvance(2);
    i0.ɵɵconditional((ctx.showAll? 10: -1));
    i0.ɵɵadvance(6);
    i0.ɵɵconditional((ctx.showReset? 16: -1));
  }
}
